[gd_scene load_steps=3 format=3 uid="uid://c0nn12ilucaoj"]

[ext_resource type="PackedScene" uid="uid://c38y5lkdchimf" path="res://Scenes/TSCN/UI/MissionUiBox.tscn" id="1_wmqaw"]
[ext_resource type="Script" path="res://Scripts/Level/ResearchStationCamera.gd" id="2_e3xfe"]

[node name="ResearchStation" type="Node2D"]

[node name="TempStationWalls" type="Polygon2D" parent="."]
color = Color(0.1984, 0.25792, 0.31, 1)
polygon = PackedVector2Array(22, 133, 125, 16, 1783, 22, 1892, 88, 1889, 496, 2015, 610, 2595, 617, 2706, 509, 2713, 116, 2799, 10, 4438, 14, 4540, 110, 4546.48, 584.763, 4709, 657, 4702, 1048, 30, 1037, 20, 137, -22, 87, -22, 1124, 4833, 1126, 4703, 1048, 4710, 657, 4793.35, 572.669, 4743, -130, -9, -115, -21, 82)
metadata/_edit_lock_ = true

[node name="TempDock" type="Polygon2D" parent="."]
color = Color(0.35, 0.189, 0.1085, 1)
offset = Vector2(-0.7, 0)
polygon = PackedVector2Array(4825, 1125, 6936, 1116, 6933, 1221, 6857, 1219, 6882, 1724, 6644, 1729, 6686, 1206, 6309, 1197, 6327, 1713, 6143, 1695, 6148, 1188, 5907, 1183, 5923, 1700, 5728, 1693, 5726, 1188, 5499, 1206, 5510, 1733, 5321, 1717, 5335, 1219, 5126, 1230, 5099, 1744, 4875, 1722, 4906, 1210, 4830, 1237)
metadata/_edit_lock_ = true

[node name="StationaryUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Mission1" parent="StationaryUI" instance=ExtResource("1_wmqaw")]
layout_mode = 1
offset_left = 825.0
offset_top = 189.0
offset_right = 825.0
offset_bottom = 189.0
metadata/_edit_lock_ = true

[node name="MissionsTitle" type="Label" parent="StationaryUI"]
layout_mode = 0
offset_left = -10.0
offset_top = 33.0
offset_right = 1933.0
offset_bottom = 212.0
theme_override_font_sizes/font_size = 56
text = "Missions"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="SubmarineTitle" type="Label" parent="StationaryUI"]
layout_mode = 0
offset_left = 2659.0
offset_top = 19.0
offset_right = 4602.0
offset_bottom = 198.0
theme_override_font_sizes/font_size = 56
text = "Submarine"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(964, 535)
script = ExtResource("2_e3xfe")
metadata/_edit_lock_ = true

[node name="MoveRightButton" type="Button" parent="Camera2D"]
offset_left = 820.0
offset_top = -45.0
offset_right = 913.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 66
text = ">"
metadata/_edit_lock_ = true

[node name="MoveLeftButton" type="Button" parent="Camera2D"]
offset_left = -914.0
offset_top = -41.0
offset_right = -821.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 66
text = "<"
metadata/_edit_lock_ = true

[node name="CameraPositions" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Missions" type="Node2D" parent="CameraPositions"]
position = Vector2(964, 535)
metadata/_edit_lock_ = true

[node name="Submarine" type="Node2D" parent="CameraPositions"]
position = Vector2(3639, 534)
metadata/_edit_lock_ = true

[node name="Docks" type="Node2D" parent="CameraPositions"]
position = Vector2(5917, 834)
metadata/_edit_lock_ = true

[connection signal="button_up" from="Camera2D/MoveRightButton" to="Camera2D" method="_on_move_right_button_button_up"]
[connection signal="button_up" from="Camera2D/MoveLeftButton" to="Camera2D" method="_on_move_left_button_button_up"]
